[package]
name = "Oregonious_Trail"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "otserver"
path = "src/bin/server.rs"

[[bin]]
name = "otclient"
path = "src/bin/client/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"  # Optional, for JSON serialization/deserialization
tokio = { version = "1", features = ["full"] }
